Remove dependance Python 3.8

--- a/td/td5/pyro-intro.ipynb
+++ b/td/td5/pyro-intro.ipynb
@@ -163,7 +163,7 @@
     "mean = # TODO\n",
     "std = # TODO\n",
     "\n",
-    "print(f\"{mean=}, {std=}\")"
+    "print(f\"Mean: {mean}, Std: {std}\")"
    ]
   },
   {
@@ -230,7 +230,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f\"{guide.median()=}\")"
+    "print(f\"Median: {guide.median()}\")"
    ]
   },
   {
